Fixing font size causing elements overlap on smaller devices

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -14,7 +14,8 @@
 		margin: 0;
 	}
 
-	.contact-form, .contact-details  {
+	.contact-form,
+	.contact-details {
 		@media #{$desktop} {
 			-webkit-flex: 1;
 			flex: 1;
@@ -22,7 +23,7 @@
 	}
 
 	.contact-details {
-		font-size: .9em;
+		font-size: clamp(0.75rem, 1.8vw, .9em);
 		margin-top: 60px;
 	}
 }
