--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,5 +1,5 @@
 footer {
-	font-size: .6em;
+	font-size: clamp(0.5rem, 1.2vw, .6em);
 	position: relative;
 	background: #2b2b40;
 	color: #fff;
@@ -24,6 +24,7 @@ footer {
 
 		&.footer-right-links {
 			float: left;
+
 			@media #{$tablet} {
 				float: right;
 			}
@@ -43,6 +44,7 @@ footer {
 				&:hover {
 					text-decoration: none;
 				}
+
 				svg {
 					fill: #999;
 					transition: fill 0.2s ease;
