--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -1,4 +1,5 @@
-.button a, input[type=submit] {
+.button a,
+input[type=submit] {
 	color: $brand-color;
 	text-decoration: none;
 	border: 2px solid $brand-color;
@@ -10,19 +11,21 @@
 
 .button.wide {
 	text-align: center;
+
 	a {
 		width: 50%;
 	}
 }
 
-.button a:hover, input[type=submit]:hover {
+.button a:hover,
+input[type=submit]:hover {
 	background: $brand-color;
 	color: #fff;
 	cursor: pointer;
 }
 
 .button.alt a {
-	background: rgba(255,255,255,0);
+	background: rgba(255, 255, 255, 0);
 	border: 2px solid rgba(255, 255, 255, 1);
 	color: #fff;
 }
@@ -33,13 +36,21 @@
 	text-shadow: none;
 }
 
-textarea, input, button, select { font-family: inherit; font-size: inherit; }
+textarea,
+input,
+button,
+select {
+	font-family: inherit;
+	font-size: inherit;
+}
 
 input[type=submit] {
 	margin: 20px 0 0 0;
 }
 
-label, input, textarea {
+label,
+input,
+textarea {
 	display: block;
 	width: 100%;
 	box-sizing: border-box;
@@ -54,12 +65,14 @@ label {
 	margin: 20px 0 5px 0;
 }
 
-input, textarea {
+input,
+textarea {
 	padding: 10px;
-	font-size: 1em;
+	font-size: clamp(0.85rem, 2vw, 1em);
 }
 
-input, textarea {
+input,
+textarea {
 	-webkit-transition: all 0.30s ease-in-out;
 	-moz-transition: all 0.30s ease-in-out;
 	-ms-transition: all 0.30s ease-in-out;
@@ -68,7 +81,10 @@ input, textarea {
 	border: 1px solid #DDDDDD;
 }
 
-input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus {
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus,
+textarea:focus {
 	box-shadow: 0 0 5px rgba(214, 39, 39, 0.905);
 	border: 1px solid rgb(138, 25, 19);
 }
