--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -87,7 +87,7 @@ header {
 	}
 
 	.company-name {
-		font-size: 1.7em;
+		font-size: clamp(1.2rem, 3vw, 1.7em);
 		display: inline-block;
 
 		img {
@@ -146,7 +146,7 @@ blockquote {
 blockquote:before {
 	color: #ccc;
 	content: open-quote;
-	font-size: 4em;
+	font-size: clamp(2.5rem, 5vw, 4em);
 	line-height: 0.1em;
 	margin-right: 0.25em;
 	vertical-align: -0.4em;
@@ -175,7 +175,7 @@ blockquote:before {
 	left: 0;
 	bottom: 30px;
 	text-align: center;
-	font-size: 1.4em;
+	font-size: clamp(1.1rem, 2.5vw, 1.4em);
 	width: 100%;
 
 	a {
@@ -189,29 +189,29 @@ blockquote:before {
 	}
 
 	.arrow {
-		font-size: .6em;
+		font-size: clamp(0.5rem, 1.2vw, .6em);
 	}
 }
 
 p.image-credits {
-	color:#FFFFFF99;
+	color: #FFFFFF99;
 	position: absolute;
 	right: 30px;
 	bottom: 30px;
-	margin-right:30px;
+	margin-right: 30px;
 	text-align: right;
-	font-size: 0.7em;
+	font-size: clamp(0.55rem, 1.3vw, 0.7em);
 	width: 100%;
 
 	a {
-			text-decoration: none;
-			color: #fff;
-			opacity: .9;
-	
-			&:hover {
-				opacity: 1;
-			}
+		text-decoration: none;
+		color: #fff;
+		opacity: .9;
+
+		&:hover {
+			opacity: 1;
 		}
+	}
 }
 
 .editor-link {
@@ -225,11 +225,10 @@ p.image-credits {
 		width: 100%;
 		max-width: 500px;
 		box-sizing: border-box;
-		font-size: 2rem;
 		text-decoration: none;
 		padding: 10px 15px;
 		margin: 0;
-		font-size: 18px;
+		font-size: clamp(14px, 2vw, 18px);
 		cursor: pointer;
 		background-color: #f7e064;
 		color: #333;
@@ -240,7 +239,6 @@ p.image-credits {
 			color: #333;
 		}
 	}
-
 }
 
 .cms-editor-active .editor-link {
