--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -17,7 +17,6 @@
 
 		.project-details {
 			padding-top: 15px;
-
 		}
 	}
 }
@@ -28,7 +27,7 @@
 		padding: 30px 0 0 0;
 		border: 1px solid #eee;
 		margin: 30px 0;
-		font-size: .8em;
+		font-size: clamp(0.7rem, 1.5vw, .8em);
 
 		.square-image {
 			width: 125px;
@@ -47,19 +46,19 @@
 			color: #000;
 			text-decoration: none;
 			font-weight: normal;
-			font-size: 1.3em;
+			font-size: clamp(1rem, 2.5vw, 1.3em);
 		}
 	}
 
 	h2 {
 		text-align: left;
-		font-size: 2.6em;
+		font-size: clamp(1.6rem, 4vw, 2.6em);
 		margin: 0;
 	}
 
 	.project-details {
 		border-bottom: 1px solid #eee;
-		font-size: .9em;
+		font-size: clamp(0.75rem, 1.8vw, .9em);
 		margin: 0;
 		padding: 40px 0 0 0;
 
@@ -106,11 +105,12 @@
 
 	background: #eee;
 	padding: 3px 5px;
-	font-size: .8em;
+	font-size: clamp(0.65rem, 1.5vw, .8em);
 	border-radius: 5px;
 	color: #888;
 
 	transition: .2s ease-in-out;
+
 	a {
 
 		&:hover {
@@ -125,7 +125,7 @@
 
 	&:after {
 		content: "x";
-		font-size: .5em;
+		font-size: clamp(0.4rem, 1vw, .5em);
 		position: relative;
 		bottom: 4px;
 		right: -3px;
@@ -138,7 +138,7 @@
 }
 
 .project-navigation {
-	font-size: 14px;
+	font-size: clamp(0.75rem, 1.8vw, 14px);
 	display: block;
 	width: auto;
 	overflow: hidden;
@@ -146,20 +146,20 @@
 	a {
 		display: block;
 		width: 50%;
-		// float: left;
 		margin: 1em 0;
 	}
 
 	.next {
-		float:right;
+		float: right;
 		text-align: right;
 	}
+
 	.prev {
-		float:left;
+		float: left;
 		text-align: left;
 	}
 }
 
 .pagination {
-	padding: 30px
+	padding: 30px;
 }
